--- a/activities.html
+++ b/activities.html
@@ -153,7 +153,7 @@
 					<div class="container clearfix">
 						<div class="row">
 
-							<div class="portfolio-items  isotopeWrapper clearfix imgHover neko-hover-1 isotope" id="3" style="position: relative; overflow: hidden; height: 1469px;">
+							<div class="portfolio-items  isotopeWrapper clearfix imgHover neko-hover-1 isotope" id="3">
 
 
 								<!-- portfolio item -->
@@ -343,7 +343,9 @@
 						<div class="row">
 
 							<div class="col-md-12">
-								<p>Copyright © 2014 <a href="http://www.slmbk.com/" target="blank">Slmbk App Maker - Create Android and iPhone Mobile Apps</a> / All rights reserved.</p>
+								<p>Copyright © 2014 <a href="http://www.apphq.in/" target="blank">appHQ App Maker - Create Android and iPhone Mobile Apps</a> / All rights reserved.</p>
+								<hr>
+								<p>Hotels in lonavala, bungalows in lonavala, cheap accommodation in lonavala, rooms in lonavala, resorts in lonavala, guest houses, farm houses, one day picnic, conference, seminar, banquets in lonavala, dhabas, rooms in  lonavala, sightseeing, karla, malavli, valvan dam, bushy dam, tiger point, lonavala khandala, karla caves, rajmachi, ekveera, imagica</p>
 							</div>
 
 						</div>
