--- a/room-tariff.html
+++ b/room-tariff.html
@@ -356,9 +356,10 @@
 						<div class="row">
 
 							<div class="col-md-12">
-								<p>Copyright © 2014 <a href="http://www.slmbk.com/" target="blank">Slmbk App Maker - Create Android and iPhone Mobile Apps</a> / All rights reserved.</p>
+								<p>Copyright © 2014 <a href="http://www.apphq.in/" target="blank">appHQ App Maker - Create Android and iPhone Mobile Apps</a> / All rights reserved.</p>
+								<hr>
+								<p>Hotels in lonavala, bungalows in lonavala, cheap accommodation in lonavala, rooms in lonavala, resorts in lonavala, guest houses, farm houses, one day picnic, conference, seminar, banquets in lonavala, dhabas, rooms in  lonavala, sightseeing, karla, malavli, valvan dam, bushy dam, tiger point, lonavala khandala, karla caves, rajmachi, ekveera, imagica</p>
 							</div>
-
 						</div>
 					</div>
 				</section>
