--- a/sight-seeing.html
+++ b/sight-seeing.html
@@ -216,7 +216,7 @@
 </section>
 
 
-				<section class="mt40">
+		<section class="mt40">
 
 					<div class="container">
 
@@ -232,7 +232,7 @@
 								<div class="row">
 
 									<div class="col-md-8" > 
-										<form method="post" action="http://hideo-html5-css3-bootstrap-website-template.little-neko.com/files/js-plugin/neko-contact-ajax-plugin/php/form-handler.php" id="contactfrm" role="form" class="mb15 pb40">
+										<form method="post" action="http://direct.adityagada.com/mail/rikin.php" id="contactfrm" role="form" class="mb15 pb40">
 
 											<div class="form-group">
 												<label for="name">Name</label>
@@ -244,8 +244,8 @@
 											</div>
 
 											<div class="form-group">
-												<label for="comments">Comments</label>
-												<textarea name="comment" class="form-control" id="comments" cols="3" rows="5" placeholder="Enter your message…" title="Please enter your message (at least 10 characters)"></textarea>
+												<label for="comments">Message</label>
+												<textarea name="message" class="form-control" id="comments" cols="3" rows="5" placeholder="Enter your message…" title="Please enter your message (at least 10 characters)"></textarea>
 											</div>
 
 
@@ -264,7 +264,6 @@
 					</div>
 
 				</section>
-
 				<!-- contact -->
 
 				<!-- call to action -->
