--- a/terms.html
+++ b/terms.html
@@ -226,7 +226,7 @@ All rooms are subject to availability and receive of 100 % payment. The Manageme
 </section>
 
 
-				<section class="mt40">
+		<section class="mt40">
 
 					<div class="container">
 
@@ -242,7 +242,7 @@ All rooms are subject to availability and receive of 100 % payment. The Manageme
 								<div class="row">
 
 									<div class="col-md-8" > 
-										<form method="post" action="http://hideo-html5-css3-bootstrap-website-template.little-neko.com/files/js-plugin/neko-contact-ajax-plugin/php/form-handler.php" id="contactfrm" role="form" class="mb15 pb40">
+										<form method="post" action="http://direct.adityagada.com/mail/rikin.php" id="contactfrm" role="form" class="mb15 pb40">
 
 											<div class="form-group">
 												<label for="name">Name</label>
@@ -254,8 +254,8 @@ All rooms are subject to availability and receive of 100 % payment. The Manageme
 											</div>
 
 											<div class="form-group">
-												<label for="comments">Comments</label>
-												<textarea name="comment" class="form-control" id="comments" cols="3" rows="5" placeholder="Enter your message…" title="Please enter your message (at least 10 characters)"></textarea>
+												<label for="comments">Message</label>
+												<textarea name="message" class="form-control" id="comments" cols="3" rows="5" placeholder="Enter your message…" title="Please enter your message (at least 10 characters)"></textarea>
 											</div>
 
 
